<resources>
    <string name="app_name">ProyFinalAndroid</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="logout">Logout</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
